# call_assistant

./: .gitignore
call-assistant/: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
call-assistant/apps/backend/: pom.xml
call-assistant/apps/desktop/: .env.example  electron.vite.config.ts  index.html  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json
call-assistant/docs/: ARCHITECTURE.md  DEMO-SETUP.md
call-assistant/docs/adr/: ADR-001-hexagonal-architecture.md  ADR-002-reactive-stack.md  ADR-003-rust-audio-sidecar.md
call-assistant/docs/api/: openapi.yaml
call-assistant/docs/legal/: DECLARACAO-DE-AUTORIA.md  GUIA-REGISTRO-INPI.md  HASH-REGISTRO.md
call-assistant/infra/docker/: docker-compose.yml  otel-collector-config.yml  prometheus.yml
call-assistant/services/audio-engine/: Cargo.toml
call-assistant/services/audio-engine/src/: main.rs  protocol.rs
pageCallAssistant/: .env.example  .env.railway  .gitignore  .railwayignore  Dockerfile  middleware.ts  package-lock.json  package.json  railway.json  tailwind.config.ts
pageCallAssistant/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
pageCallAssistant/app/actions/: billing.ts
pageCallAssistant/app/dashboard/: page.tsx
pageCallAssistant/app/forgot-password/: page.tsx
pageCallAssistant/app/login/: page.tsx
pageCallAssistant/components/: Navbar.tsx  SupportChat.tsx
pageCallAssistant/lib/: api.ts  auth.ts  email.ts  utils.ts
pageCallAssistant/prisma/: schema.prisma
pageCallAssistant/types/: index.ts
(+150 files in other folders)
