[package]
name = "audio-engine"
version = "0.1.0"
edition = "2021"
description = "Call Assistant audio capture sidecar"

[[bin]]
name = "audio-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Foundation",
    "Win32_Media_KernelStreaming",
] }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.11"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
